compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case_clause_guards__operator_wrapping_right.snap
---
source: compiler-core/src/go/tests/case_clause_guards.rs
expression: "pub fn main(xs, y: Bool, z: Bool) {\n  case xs {\n    #(x) if x == { y == z } -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs, y: Bool, z: Bool) {
  case xs {
    #(x) if x == { y == z } -> 1
    _ -> 0
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main(
  xs gleam_P.Tuple1_t[gleam_P.Bool_t],
  y gleam_P.Bool_t,
  z gleam_P.Bool_t,
) gleam_P.Int_t {
  if gleam_P.Bool_t(xs.P_0.Equal((gleam_P.Bool_t(y.Equal(z))))) {
    var x gleam_P.Bool_t = xs.P_0
    _ = x
    return 1
  } else {
    return 0
  }
}
